// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`From within the empty-project fixture returns the correct routers with a project 1`] = `
[
  RedwoodRouter {
    "errors": [],
    "filepath": "/web/src/Routes.tsx",
    "name": "Routes",
    "routes": [
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "name": "Routes",
        "notfound": true,
        "pageName": "NotFoundPage",
        "path": undefined,
        "prerender": false,
        "warnings": [],
      },
    ],
    "warnings": [],
  },
]
`;

exports[`From within the empty-project fixture returns the correct routers without a project 1`] = `
[
  RedwoodRouter {
    "errors": [],
    "filepath": "/web/src/Routes.tsx",
    "name": "Routes",
    "routes": [
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "name": "Routes",
        "notfound": true,
        "pageName": "NotFoundPage",
        "path": undefined,
        "prerender": false,
        "warnings": [],
      },
    ],
    "warnings": [],
  },
]
`;

exports[`From within the example-todo-main fixture returns the correct routers with a project 1`] = `
[
  RedwoodRouter {
    "errors": [],
    "filepath": "/web/src/Routes.js",
    "name": "Routes",
    "routes": [
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "name": "home",
        "notfound": false,
        "pageName": "HomePage",
        "path": "/",
        "prerender": true,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "name": "typescriptPage",
        "notfound": false,
        "pageName": "TypeScriptPage",
        "path": "/typescript",
        "prerender": true,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "name": "someOtherPage",
        "notfound": false,
        "pageName": "EditUserPage",
        "path": "/somewhereElse",
        "prerender": true,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "name": "fooPage",
        "notfound": false,
        "pageName": "FooPage",
        "path": "/foo",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "name": "barPage",
        "notfound": false,
        "pageName": "BarPage",
        "path": "/bar",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "name": "privatePage",
        "notfound": false,
        "pageName": "PrivatePage",
        "path": "/private-page",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "name": "Routes",
        "notfound": true,
        "pageName": "NotFoundPage",
        "path": undefined,
        "prerender": false,
        "warnings": [],
      },
    ],
    "warnings": [],
  },
]
`;

exports[`From within the example-todo-main fixture returns the correct routers without a project 1`] = `
[
  RedwoodRouter {
    "errors": [],
    "filepath": "/web/src/Routes.js",
    "name": "Routes",
    "routes": [
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "name": "home",
        "notfound": false,
        "pageName": "HomePage",
        "path": "/",
        "prerender": true,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "name": "typescriptPage",
        "notfound": false,
        "pageName": "TypeScriptPage",
        "path": "/typescript",
        "prerender": true,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "name": "someOtherPage",
        "notfound": false,
        "pageName": "EditUserPage",
        "path": "/somewhereElse",
        "prerender": true,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "name": "fooPage",
        "notfound": false,
        "pageName": "FooPage",
        "path": "/foo",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "name": "barPage",
        "notfound": false,
        "pageName": "BarPage",
        "path": "/bar",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "name": "privatePage",
        "notfound": false,
        "pageName": "PrivatePage",
        "path": "/private-page",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "name": "Routes",
        "notfound": true,
        "pageName": "NotFoundPage",
        "path": undefined,
        "prerender": false,
        "warnings": [],
      },
    ],
    "warnings": [],
  },
]
`;

exports[`From within the example-todo-main-with-errors fixture returns the correct routers with a project 1`] = `
[
  RedwoodRouter {
    "errors": [],
    "filepath": "/web/src/Routes.js",
    "name": "Routes",
    "routes": [
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "name": "home",
        "notfound": false,
        "pageName": "HomePage",
        "path": "/",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "name": "home",
        "notfound": false,
        "pageName": "HomePage",
        "path": "/",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "name": "something-else",
        "notfound": false,
        "pageName": "DoesNotExist",
        "path": "/{foo}/{foo}",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "name": "Routes",
        "notfound": false,
        "pageName": "NotFoundPage",
        "path": undefined,
        "prerender": false,
        "warnings": [],
      },
    ],
    "warnings": [],
  },
]
`;

exports[`From within the example-todo-main-with-errors fixture returns the correct routers without a project 1`] = `
[
  RedwoodRouter {
    "errors": [],
    "filepath": "/web/src/Routes.js",
    "name": "Routes",
    "routes": [
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "name": "home",
        "notfound": false,
        "pageName": "HomePage",
        "path": "/",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "name": "home",
        "notfound": false,
        "pageName": "HomePage",
        "path": "/",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "name": "something-else",
        "notfound": false,
        "pageName": "DoesNotExist",
        "path": "/{foo}/{foo}",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "name": "Routes",
        "notfound": false,
        "pageName": "NotFoundPage",
        "path": undefined,
        "prerender": false,
        "warnings": [],
      },
    ],
    "warnings": [],
  },
]
`;

exports[`From within the test-project fixture returns the correct routers with a project 1`] = `
[
  RedwoodRouter {
    "errors": [],
    "filepath": "/web/src/Routes.tsx",
    "name": "Routes",
    "routes": [
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "name": "login",
        "notfound": false,
        "pageName": "LoginPage",
        "path": "/login",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "name": "signup",
        "notfound": false,
        "pageName": "SignupPage",
        "path": "/signup",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "name": "forgotPassword",
        "notfound": false,
        "pageName": "ForgotPasswordPage",
        "path": "/forgot-password",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "name": "resetPassword",
        "notfound": false,
        "pageName": "ResetPasswordPage",
        "path": "/reset-password",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "name": "newContact",
        "notfound": false,
        "pageName": "ContactNewContactPage",
        "path": "/contacts/new",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "name": "editContact",
        "notfound": false,
        "pageName": "ContactEditContactPage",
        "path": "/contacts/{id:Int}/edit",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "name": "contact",
        "notfound": false,
        "pageName": "ContactContactPage",
        "path": "/contacts/{id:Int}",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "name": "contacts",
        "notfound": false,
        "pageName": "ContactContactsPage",
        "path": "/contacts",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "name": "newPost",
        "notfound": false,
        "pageName": "PostNewPostPage",
        "path": "/posts/new",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "name": "editPost",
        "notfound": false,
        "pageName": "PostEditPostPage",
        "path": "/posts/{id:Int}/edit",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "name": "post",
        "notfound": false,
        "pageName": "PostPostPage",
        "path": "/posts/{id:Int}",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "name": "posts",
        "notfound": false,
        "pageName": "PostPostsPage",
        "path": "/posts",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "name": "waterfall",
        "notfound": false,
        "pageName": "WaterfallPage",
        "path": "/waterfall/{id:Int}",
        "prerender": true,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "name": "profile",
        "notfound": false,
        "pageName": "ProfilePage",
        "path": "/profile",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "name": "blogPost",
        "notfound": false,
        "pageName": "BlogPostPage",
        "path": "/blog-post/{id:Int}",
        "prerender": true,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "name": "contactUs",
        "notfound": false,
        "pageName": "ContactUsPage",
        "path": "/contact",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "name": "about",
        "notfound": false,
        "pageName": "AboutPage",
        "path": "/about",
        "prerender": true,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "name": "home",
        "notfound": false,
        "pageName": "HomePage",
        "path": "/",
        "prerender": true,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "name": "Routes",
        "notfound": true,
        "pageName": "NotFoundPage",
        "path": undefined,
        "prerender": true,
        "warnings": [],
      },
    ],
    "warnings": [],
  },
]
`;

exports[`From within the test-project fixture returns the correct routers without a project 1`] = `
[
  RedwoodRouter {
    "errors": [],
    "filepath": "/web/src/Routes.tsx",
    "name": "Routes",
    "routes": [
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "name": "login",
        "notfound": false,
        "pageName": "LoginPage",
        "path": "/login",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "name": "signup",
        "notfound": false,
        "pageName": "SignupPage",
        "path": "/signup",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "name": "forgotPassword",
        "notfound": false,
        "pageName": "ForgotPasswordPage",
        "path": "/forgot-password",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "name": "resetPassword",
        "notfound": false,
        "pageName": "ResetPasswordPage",
        "path": "/reset-password",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "name": "newContact",
        "notfound": false,
        "pageName": "ContactNewContactPage",
        "path": "/contacts/new",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "name": "editContact",
        "notfound": false,
        "pageName": "ContactEditContactPage",
        "path": "/contacts/{id:Int}/edit",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "name": "contact",
        "notfound": false,
        "pageName": "ContactContactPage",
        "path": "/contacts/{id:Int}",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "name": "contacts",
        "notfound": false,
        "pageName": "ContactContactsPage",
        "path": "/contacts",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "name": "newPost",
        "notfound": false,
        "pageName": "PostNewPostPage",
        "path": "/posts/new",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "name": "editPost",
        "notfound": false,
        "pageName": "PostEditPostPage",
        "path": "/posts/{id:Int}/edit",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "name": "post",
        "notfound": false,
        "pageName": "PostPostPage",
        "path": "/posts/{id:Int}",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "name": "posts",
        "notfound": false,
        "pageName": "PostPostsPage",
        "path": "/posts",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "name": "waterfall",
        "notfound": false,
        "pageName": "WaterfallPage",
        "path": "/waterfall/{id:Int}",
        "prerender": true,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "name": "profile",
        "notfound": false,
        "pageName": "ProfilePage",
        "path": "/profile",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "name": "blogPost",
        "notfound": false,
        "pageName": "BlogPostPage",
        "path": "/blog-post/{id:Int}",
        "prerender": true,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "name": "contactUs",
        "notfound": false,
        "pageName": "ContactUsPage",
        "path": "/contact",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "name": "about",
        "notfound": false,
        "pageName": "AboutPage",
        "path": "/about",
        "prerender": true,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "name": "home",
        "notfound": false,
        "pageName": "HomePage",
        "path": "/",
        "prerender": true,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "name": "Routes",
        "notfound": true,
        "pageName": "NotFoundPage",
        "path": undefined,
        "prerender": true,
        "warnings": [],
      },
    ],
    "warnings": [],
  },
]
`;
